Fix: Spark "designer" template doesn't have a wide enough width for the date to no wrap #341

--- a/themes/spark/css/style.css
+++ b/themes/spark/css/style.css
@@ -825,7 +825,7 @@ body.arlo {
 }
 
 .arlo#arlo.arlo-md .arlo-cal {
-    width: 92px;
+    width: 100px;
     font-size: 24px;
 }
 
